[package]
name    = "hexplorer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hexplorer"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
chrono     = { version = "0.4", features = ["serde"] }
crossterm  = "0.28"
dirs       = "5"
ratatui    = "0.29"
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
tokio      = { version = "1",    features = ["full"] }

[dev-dependencies]
tempfile = "3"
