[package]
name = "hexplorer"
version = "0.1.1"
edition = "2021"
authors = ["lupodevelop <you@example.com>"]
description = "Terminal UI for browsing HEX.pm package registry for the BEAM ecosystem"
license = "MIT"
repository = "https://github.com/lupodevelop/hexplorer"
documentation = "https://docs.rs/hexplorer"
readme = "README.md"
keywords = ["hex", "gleam", "elixir", "erlang", "cli"]

[[bin]]
name = "hexplorer"
path = "src/main.rs"

[dependencies]
anyhow     = "1"
chrono     = { version = "0.4", features = ["serde"] }
crossterm  = "0.28"
dirs       = "5"
ratatui    = "0.29"
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
tokio      = { version = "1",    features = ["full"] }

[dev-dependencies]
tempfile = "3"
